# vim: set noexpandtab:
2012-07-02 Matt
	* Commented out all MC Weighting from DilTrigLogic since we are matching right now for MC
	        * Will update this once something is agreed upon
	* Made DilTrigLogic independent of 2011 triggers, so those bitflags can be removed
	* Added loose photon triggers
	* Deleted two methods from SusyNtTools that were unnecessary	
	
2012-06-27 Matt
	* I added a method to grab photons to SusyNtTools
	
2012-06-26 Steve
	* I gutted TrilTrigLogic, removing most of what was there for 2011
	* I added a very preliminary logic for 2012 trigger matching
		* Take the OR of all plateau-satisfied dilepton triggers
		* I also have the single isolated lepton triggers, but is 
		  currently commented out for my preliminary logic proposal
	* Tagging SusyNtuple-00-00-09

2012-06-25 Steve
	* Added missing trigger: mu18_tight_mu8_EFFS
	* Tagging SusyNtuple-00-00-08

2012-06-24 Steve
	* Added single lepton triggers from our corresponding dilepton triggers.
	  This way we have more flexibility to implement the best logic later
	* Added event trigger flags to Event class
	* Tagging SusyNtuple-00-00-07

2012-06-23 Steve
	* Tagging SusyNtuple-00-00-06

2012-06-22 Steve
	* Added sv0 and mv1 btaggers
	* Added more 2012 triggers
	* Added pileup weight for 2012 A-B5

2012-06-21 Matt
	* Added Photon class to SusyNt

2012-06-20 Steve
	* Updated to twentyinvfb version of MultiLep, and SUSYTools v71
	* Added preliminary 2012 triggers: 
		* EF_e24vhi_medium1
		* EF_2e12Tvh_loose1
		* EF_mu24i_tight
		* EF_2mu13
		* EF_e12Tvh_medium1_mu8
	* Tagging SusyNtuple-00-00-05
		* First tag for 2012 data/mc

2012-06-19 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTags.sh
	* Tagging SusyNtuple-00-00-04
		* Last tag for 2011 data/mc

2012-06-18 Steve
	* Added pdfSF weight to Event class, for reweighting 7TeV -> 8TeV
	* Tagging SusyNtuple-00-00-03

2012-06-17 Steve
	* Added TStopwatch for checking processing time
